# prompt

./: README.md  examples.py  pyproject.toml  requirements.txt
role/: python.md
src/prompt/: __init__.py  builder.py  template.py
tests/: __init__.py  test_builder.py  test_template.py
