[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt"
version = "0.1.0"
description = "A Python library for building and managing prompts for Large Language Models"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    {name = "Prompt Contributors"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/Ike-li/prompt"
Repository = "https://github.com/Ike-li/prompt"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
prompt = ["py.typed"]
